Fix mobile spacing

--- a/mysite/myapp/static/frontend/css/drews_login_css.css
+++ b/mysite/myapp/static/frontend/css/drews_login_css.css
@@ -170,9 +170,130 @@ span {
 
 @media only screen
   and (min-width: 320px)
-  and (max-device-width: 480px)
+  and (max-device-width: 480px) 
   and (orientation: portrait) {
-  .w3-sidebar.w3-bar-block.w3-light-grey.w3-card {
-    padding-top: 9.5% !important;
+  .header {
+    height: 8vh;
   }
+  
+    .header-right {
+      margin-right: 1%;
+      margin-top: 0%;
+      float: right;
+    }
+    
+    .header a {
+      float: right;
+      margin-top: 1%;
+      font-size: 1.8vh;
+      line-height: 5px;
+    }
+  
+    .header p {
+      font-size: 42px;
+      float: left;
+      margin-top: 5px;
+      margin-left: 2%;
+    }
+    
+    .header a:hover {
+      background-color: #3e3e3e;
+    }
+  
+    .header img {
+      border-radius: 50%;
+      float: left;
+      margin-left: 0%;
+      border: 1px solid #333333;
+      backface-visibility: hidden;
+      -webkit-backface-visibility: hidden;
+      -moz-backface-visibility: hidden;
+      -ms-backface-visibility: hidden;
+      transform: translate3d(0, 0, 0);
+      -webkit-transform: translate3d(0, 0, 0);
+    }
+  
+    #welcome {
+      float: right;
+    }
+  
+  body {
+    height: 93%;
+    width: 100%;
+    left: 72%;
+    bottom: 0px;
+    margin-left: -72%;
+    position: fixed;
+    border-radius: 3px;
+  }
+  
+  .container-custom {
+    width: 99%;
+    height: 98%;
+    margin-top: -0%;
+    display: inline-block;
+    overflow: hidden;
+  }
+  
+  .w3-sidebar.w3-bar-block.w3-light-grey.w3-card {
+    width: 15%;
+    padding-top: 20vh;
+    font-size: 1.5vh;
+  }
+  
+  #links {
+    margin-top: 200%;
+    font-size: 18px;
+  }
+  
+  #copyright {
+    font-size: 12px;
+    margin-left: 15%;
+    margin-top: 30%;
+  }
+  
+  .sidebar {
+    width: 15%;
+    float: left;
+    overflow: hidden;
+  }
+  
+  #social-feed {
+    font-size: 2vh;
+  }
+
+  #app {
+    float: left;
+    height: 100%;
+    width: 60%;
+    margin-top: 1%;
+    margin-left: 15%;
+    margin-bottom: 30%;
+    padding-bottom: 1%;
+    overflow: auto;
+    padding-right: 15px;
+    padding-left: 30px;
+    padding-top: 40px;
+    z-index: 6;
+  }
+  
+  #social-hr {
+    border: none;
+  }
+  
+  #updates {
+    height: 65%;
+    padding-top: 10px;
+  }
+  
+  .postbox {
+    width: 24%;
+    height: 50%;
+    position: absolute;
+  }
+  
+  .postbox input {
+    border-radius: 8px;
+  }
+  
 }
